# espclaude

./: .gitignore  Makefile  README.md  eim_config.toml
.serena/: project.yml
firmware/: CMakeLists.txt  sdkconfig.defaults
firmware/main/: CMakeLists.txt  config.h.example  http_client.c  http_client.h  idf_component.yml  main.c  wifi.c  wifi.h
firmware/main/ui/: screen_dashboard.c  screen_dashboard.h  screen_instances.c  screen_instances.h  screen_settings.c  screen_settings.h  theme.c  theme.h  ui.c  ui.h
